--- a/Supervised Learning/Classification/naive-bayes-model/naive_bayes.ipynb
+++ b/Supervised Learning/Classification/naive-bayes-model/naive_bayes.ipynb
@@ -1,17 +1,34 @@
 {
  "cells": [
   {
+   "metadata": {
+    "jupyter": {
+     "is_executing": true
+    }
+   },
    "cell_type": "code",
-   "execution_count": null,
-   "id": "5fc7d2a7",
-   "metadata": {},
+   "source": "",
+   "id": "dfe14c42783d78fa",
    "outputs": [],
+   "execution_count": null
+  },
+  {
+   "cell_type": "code",
+   "id": "5fc7d2a7",
+   "metadata": {
+    "jupyter": {
+     "is_executing": true
+    }
+   },
    "source": [
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import pandas as pd\n",
-    "from sklearn.model_selection import train_test_split"
-   ]
+    "from sklearn.model_selection import train_test_split\n",
+    "print(\"HI\")"
+   ],
+   "outputs": [],
+   "execution_count": null
   },
   {
    "cell_type": "code",
