--- a/Supervised Learning/Classification/naive-bayes-model/naive_bayes.ipynb
+++ b/Supervised Learning/Classification/naive-bayes-model/naive_bayes.ipynb
@@ -2,30 +2,30 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 4,
    "id": "5fc7d2a7",
    "metadata": {
     "jupyter": {
      "is_executing": true
     }
    },
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import pandas as pd\n",
     "from sklearn.model_selection import train_test_split"
-   ],
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "c086583d",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Load the dataset from CSV file\n",
-    "data = pd.read_csv(\"data.csv\")\n",
+    "data = pd.read_csv(\"Datasets\\data.csv\")\n",
     "# Remove the unnamed column (often an index column that we don't need)\n",
     "data = data.drop(columns=['Unnamed: 32'], errors='ignore')\n",
     "\n",
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "7182b9d0",
    "metadata": {},
    "outputs": [
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "87c0e6d5",
    "metadata": {},
    "outputs": [],
@@ -160,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "1e241ecd",
    "metadata": {},
    "outputs": [
@@ -168,11 +168,25 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy: 96.4912%\n"
+      "Custom Naive Bayes Accuracy: 96.4912%\n",
+      "Confusion Matrix:\n",
+      "[[70  1]\n",
+      " [ 3 40]]\n",
+      "Classification Report:\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           B       0.96      0.99      0.97        71\n",
+      "           M       0.98      0.93      0.95        43\n",
+      "\n",
+      "    accuracy                           0.96       114\n",
+      "   macro avg       0.97      0.96      0.96       114\n",
+      "weighted avg       0.97      0.96      0.96       114\n",
+      "\n"
      ]
     }
    ],
    "source": [
+    "from sklearn.metrics import confusion_matrix, classification_report\n",
     "# Create an instance of our custom Naive Bayes classifier\n",
     "nb_model = NaiveBayes()\n",
     "\n",
@@ -184,12 +198,19 @@
     "\n",
     "# Calculate accuracy by comparing predictions with actual labels\n",
     "accuracy = np.mean(model_predictions == y_test)\n",
-    "print(f\"Custom Naive Bayes Accuracy: {accuracy * 100:.4f}%\")"
+    "confunction_mtx = confusion_matrix(y_test, model_predictions)\n",
+    "class_report = classification_report(y_test, model_predictions)\n",
+    "\n",
+    "print(f\"Custom Naive Bayes Accuracy: {accuracy * 100:.4f}%\")\n",
+    "print(\"Confusion Matrix:\")\n",
+    "print(confunction_mtx)\n",
+    "print(\"Classification Report:\")\n",
+    "print(class_report)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "1f173135",
    "metadata": {},
    "outputs": [
@@ -197,7 +218,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy: 97.3684%\n"
+      "Scikit-learn Naive Bayes Accuracy: 97.3684%\n",
+      "Confusion Matrix:\n",
+      "[[71  0]\n",
+      " [ 3 40]]\n",
+      "Classification Report:\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           B       0.96      1.00      0.98        71\n",
+      "           M       1.00      0.93      0.96        43\n",
+      "\n",
+      "    accuracy                           0.97       114\n",
+      "   macro avg       0.98      0.97      0.97       114\n",
+      "weighted avg       0.97      0.97      0.97       114\n",
+      "\n"
      ]
     }
    ],
@@ -208,14 +242,21 @@
     "# Create and train the scikit-learn Gaussian Naive Bayes model\n",
     "# This is the standard implementation with optimizations and numerical stability\n",
     "gnb_model = GaussianNB()\n",
-    "gnb_model.fit(X_train, y_train)  # Train the model using training data\n",
+    "gnb_model.fit(X_train, y_train) \n",
     "\n",
     "# Make predictions on the test set using scikit-learn's implementation\n",
     "model_predictions = gnb_model.predict(X_test)\n",
     "\n",
     "# Calculate accuracy by comparing predictions to actual labels\n",
     "accuracy = np.mean(model_predictions == y_test)\n",
-    "print(f\"Scikit-learn Naive Bayes Accuracy: {accuracy * 100:.4f}%\")"
+    "confunction_mtx = confusion_matrix(y_test, model_predictions)\n",
+    "class_report = classification_report(y_test, model_predictions)\n",
+    "\n",
+    "print(f\"Scikit-learn Naive Bayes Accuracy: {accuracy * 100:.4f}%\")\n",
+    "print(\"Confusion Matrix:\")\n",
+    "print(confunction_mtx)\n",
+    "print(\"Classification Report:\")\n",
+    "print(class_report)"
    ]
   }
  ],
@@ -224,18 +265,6 @@
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.9.23"
   }
  },
  "nbformat": 4,
