--- a/Supervised Learning/Classification/python-logistic-regression/logistic_regression.ipynb
+++ b/Supervised Learning/Classification/python-logistic-regression/logistic_regression.ipynb
@@ -28,7 +28,7 @@
    "outputs": [],
    "source": [
     "# Load dataset\n",
-    "df = pd.read_csv('Datasets\\data.csv')\n",
+    "df = pd.read_csv('Datasets//data.csv')\n",
     "df.head()\n",
     "# Remove empty column \n",
     "df = df.drop(columns=[\"Unnamed: 32\"], errors=\"ignore\")"
