Fix file path separator in data loading

--- a/Supervised Learning/Classification/naive-bayes-model/naive_bayes.ipynb
+++ b/Supervised Learning/Classification/naive-bayes-model/naive_bayes.ipynb
@@ -25,7 +25,7 @@
    "outputs": [],
    "source": [
     "# Load the dataset from CSV file\n",
-    "data = pd.read_csv(\"Datasets\\data.csv\")\n",
+    "data = pd.read_csv(\"Datasets/data.csv\")\n",
     "# Remove the unnamed column (often an index column that we don't need)\n",
     "data = data.drop(columns=['Unnamed: 32'], errors='ignore')\n",
     "\n",
