Fix file path separator in dataset loading

--- a/Supervised Learning/Classification/python-k-nearest-neighbors/knn.ipynb
+++ b/Supervised Learning/Classification/python-k-nearest-neighbors/knn.ipynb
@@ -28,7 +28,7 @@
    "source": [
     "# Load and prepare dataset\n",
     "data = pd.read_csv(\n",
-    "    \"Datasets\\data.csv\"\n",
+    "    \"Datasets/data.csv\"\n",
     ")\n",
     "\n",
     "# Remove empty column\n",
