Fix file path separator for dataset loading

--- a/Supervised Learning/Regression/python-linear-regression/linear_regression.ipynb
+++ b/Supervised Learning/Regression/python-linear-regression/linear_regression.ipynb
@@ -33,7 +33,7 @@
    ],
    "source": [
     "# Load the dataset\n",
-    "training_set = pd.read_csv(\"Datasets\\Salary_dataset.csv\")\n",
+    "training_set = pd.read_csv(\"Datasets/Salary_dataset.csv\")\n",
     "\n",
     "# Display the first few rows of the dataset\n",
     "print(training_set.head())\n",
