Add max_depth experiment

--- a/Supervised Learning/Classification/decision-trees/decision_trees.ipyng.ipynb
+++ b/Supervised Learning/Classification/decision-trees/decision_trees.ipyng.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
    "id": "initial_id",
    "metadata": {
     "ExecuteTime": {
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 56,
    "id": "af21525e",
    "metadata": {},
    "outputs": [
@@ -235,7 +235,7 @@
        "[5 rows x 32 columns]"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -249,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 57,
    "id": "56666309",
    "metadata": {},
    "outputs": [
@@ -273,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 58,
    "id": "5979eff6",
    "metadata": {},
    "outputs": [
@@ -311,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 59,
    "id": "c2433646",
    "metadata": {},
    "outputs": [],
@@ -332,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 60,
    "id": "23768dc6",
    "metadata": {},
    "outputs": [],
@@ -486,7 +486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 61,
    "id": "ad539166",
    "metadata": {},
    "outputs": [
@@ -530,7 +530,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 62,
    "id": "ac0369a9",
    "metadata": {},
    "outputs": [
@@ -538,6 +538,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Custom Decision Tree Results:\n",
       "Accuracy: 0.9385964912280702\n",
       "[[69  2]\n",
       " [ 5 38]]\n",
@@ -566,7 +567,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 63,
    "id": "01df16f3",
    "metadata": {},
    "outputs": [
@@ -574,7 +575,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Sklearn Model Accuracy: 0.9649122807017544\n",
+      "Sklearn Decision Tree Results:\n",
+      "Accuracy: 0.9649\n",
       "[[71  0]\n",
       " [ 4 39]]\n",
       "              precision    recall  f1-score   support\n",
