--- a/Supervised Learning/Classification/support-vector-machines/svm.ipynb
+++ b/Supervised Learning/Classification/support-vector-machines/svm.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 66,
    "id": "ae2e23bf",
    "metadata": {},
    "outputs": [],
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 67,
    "id": "8b00d153",
    "metadata": {},
    "outputs": [
@@ -229,7 +229,7 @@
        "[5 rows x 32 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -243,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 68,
    "id": "d6dc3d7c",
    "metadata": {},
    "outputs": [
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 69,
    "id": "2854b17c",
    "metadata": {},
    "outputs": [
@@ -302,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 70,
    "id": "03c7204c",
    "metadata": {},
    "outputs": [],
@@ -364,7 +364,8 @@
     "                self.w = self.w - self.lr * dw\n",
     "                self.b = self.b - self.lr * db\n",
     "\n",
-    "                \n",
+    "            if i % 100 == 0:\n",
+    "                print(f\"Iteration {i}: Weights norm = {np.linalg.norm(self.w):.4f}, Bias = {self.b:.4f}\")\n",
     "\n",
     "    def predict(self, X):\n",
     "        # Make predictions using the decision function\n",
@@ -374,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 71,
    "id": "dce840e0",
    "metadata": {},
    "outputs": [],
@@ -389,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 72,
    "id": "9a942b22",
    "metadata": {},
    "outputs": [
@@ -397,13 +398,23 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Iteration 0: Weights norm = 0.0437, Bias = 0.0002\n",
+      "Iteration 100: Weights norm = 0.2143, Bias = 0.0234\n",
+      "Iteration 200: Weights norm = 0.3209, Bias = 0.0484\n",
+      "Iteration 300: Weights norm = 0.3806, Bias = 0.0679\n",
+      "Iteration 400: Weights norm = 0.4235, Bias = 0.0829\n",
+      "Iteration 500: Weights norm = 0.4573, Bias = 0.0955\n",
+      "Iteration 600: Weights norm = 0.4847, Bias = 0.1059\n",
+      "Iteration 700: Weights norm = 0.5085, Bias = 0.1152\n",
+      "Iteration 800: Weights norm = 0.5302, Bias = 0.1234\n",
+      "Iteration 900: Weights norm = 0.5500, Bias = 0.1309\n",
       "SVM Test Accuracy: 98.25%\n"
      ]
     }
    ],
    "source": [
     "# Train custom SVM model and evaluate performance\n",
-    "svm_model = SVM(learning_rate=0.0001, lambda_param=0.1, n_iters=1000, batch_size=64)\n",
+    "svm_model = SVM(learning_rate=0.0001, lambda_param=0.01, n_iters=1000, batch_size=64)\n",
     "svm_model.fit(X_train_scaled, y_train)\n",
     "\n",
     "predictions = svm_model.predict(X_test_scaled)\n",
@@ -413,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 73,
    "id": "b99df07c",
    "metadata": {},
    "outputs": [
