Add k-means clustering notebook and .gitignore

--- a/Unsupervised Learning/k-means-clustering/k-means-clustering.ipynb
+++ b/Unsupervised Learning/k-means-clustering/k-means-clustering.ipynb
@@ -2,23 +2,23 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": null,
    "id": "7e5358f3",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import matplotlib.pyplot as plt\n",
-    "import numpy as np\n",
-    "import pandas as pd\n",
-    "import seaborn as sns\n",
-    "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.decomposition import PCA\n",
-    "from IPython.display import clear_output"
+    "# Import Required Libraries for K-Means Clustering Implementation\n",
+    "import matplotlib.pyplot as plt  # For data visualization and plotting\n",
+    "import numpy as np              # For numerical computations and array operations\n",
+    "import pandas as pd             # For data manipulation and analysis\n",
+    "import seaborn as sns           # For enhanced statistical visualizations\n",
+    "from sklearn.decomposition import PCA                # For dimensionality reduction and visualization\n",
+    "from IPython.display import clear_output             # For dynamic plot updates during iterations"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": null,
    "id": "df297d9a",
    "metadata": {},
    "outputs": [
@@ -237,24 +237,41 @@
     }
    ],
    "source": [
+    "# Load FIFA 24 male players dataset\n",
+    "# This dataset contains detailed statistics for professional football players\n",
     "players = pd.read_csv('Datasets\\male_fc_24_players.csv')\n",
+    "\n",
+    "# Display the first 5 rows to understand the dataset structure\n",
+    "# Shows player names, ratings, and various performance metrics\n",
     "players.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": null,
    "id": "b476a029",
    "metadata": {},
    "outputs": [],
    "source": [
-    "features = ['age', 'overall', 'PAC', 'SHO', 'DRI', 'DEF', 'PHY'] #age,overall,PAC,SHO,PAS,DRI,DEF,PHY\n",
+    "# Select key performance features for clustering analysis\n",
+    "# These 7 features represent core player attributes:\n",
+    "# - age: Player age\n",
+    "# - overall: Overall rating (0-100)\n",
+    "# - PAC: Pace/Speed rating\n",
+    "# - SHO: Shooting ability rating  \n",
+    "# - DRI: Dribbling skills rating\n",
+    "# - DEF: Defensive abilities rating\n",
+    "# - PHY: Physical attributes rating\n",
+    "features = ['age', 'overall', 'PAC', 'SHO', 'DRI', 'DEF', 'PHY']\n",
+    "\n",
+    "# Remove players with missing values in any of the selected features\n",
+    "# This ensures clean data for clustering algorithm\n",
     "players = players.dropna(subset=features)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": null,
    "id": "9835c5b3",
    "metadata": {},
    "outputs": [
@@ -427,13 +444,18 @@
     }
    ],
    "source": [
+    "# Extract only the selected features for clustering\n",
+    "# Create a copy to avoid modifying the original dataset\n",
     "data = players[features].copy()\n",
+    "\n",
+    "# Display the extracted features dataset\n",
+    "# This shows only the 7 numerical features we'll use for clustering\n",
     "data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": null,
    "id": "ce91ddd8",
    "metadata": {},
    "outputs": [
@@ -580,14 +602,22 @@
     }
    ],
    "source": [
-    "#Scale data to standard normal distribution\n",
+    "# Apply Z-score normalization (standardization) to the data\n",
+    "# This transforms each feature to have mean=0 and standard deviation=1\n",
+    "# Standardization is crucial for K-Means because:\n",
+    "# 1. All features contribute equally to distance calculations\n",
+    "# 2. Features with larger scales don't dominate the clustering\n",
+    "# 3. Improves convergence speed and stability\n",
     "data = (data - data.mean()) / data.std() \n",
+    "\n",
+    "# Display statistical summary of normalized data\n",
+    "# All features should now have mean≈0 and std≈1\n",
     "data.describe()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": null,
    "id": "ccb25d47",
    "metadata": {},
    "outputs": [
@@ -691,117 +721,195 @@
     }
    ],
    "source": [
+    "# Display first few rows of standardized data\n",
+    "# Values should now be centered around 0 with similar scales\n",
+    "# Positive values = above average, Negative values = below average\n",
     "data.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": null,
    "id": "2ea4fcaf",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Custom K-Means Clustering Implementation from Scratch\n",
+    "# This class implements Lloyd's algorithm for K-Means clustering\n",
     "class KMeansClustering:\n",
     "    def __init__(self, k=3, max_iterations=100, random_state=None):\n",
-    "        self.k = k\n",
-    "        self.max_iteration = max_iterations\n",
-    "        self.random_state = random_state\n",
+    "        \"\"\"\n",
+    "        Initialize K-Means clustering algorithm\n",
+    "        \n",
+    "        Parameters:\n",
+    "        k (int): Number of clusters to create\n",
+    "        max_iterations (int): Maximum number of iterations before stopping\n",
+    "        random_state (int): Random seed for reproducible results\n",
+    "        \"\"\"\n",
+    "        self.k = k                           # Number of clusters\n",
+    "        self.max_iteration = max_iterations  # Maximum iterations\n",
+    "        self.random_state = random_state     # Random seed for reproducibility\n",
     "\n",
-    "        self.centroids = None\n",
-    "        self.labels = None\n",
-    "        self.n_iterations = 0\n",
-    "        self.inertia = None\n",
+    "        # Initialize algorithm state variables\n",
+    "        self.centroids = None    # Cluster centers (will be k x n_features array)\n",
+    "        self.labels = None       # Cluster assignments for each data point\n",
+    "        self.n_iterations = 0    # Number of iterations performed\n",
+    "        self.inertia = None      # Within-cluster sum of squares (measure of compactness)\n",
     "\n",
     "    def initialize_centroids(self, data):\n",
+    "        \"\"\"\n",
+    "        Initialize k centroids randomly within the data bounds\n",
+    "        This ensures centroids start within the feature space range\n",
+    "        \"\"\"\n",
+    "        # Set random seed for reproducible centroid initialization\n",
     "        if self.random_state:\n",
     "            np.random.seed(self.random_state)\n",
     "\n",
+    "        # Get min and max values for each feature to define bounds\n",
     "        min_vals = data.min().values if hasattr(data, 'values') else data.min(axis=0)\n",
     "        max_vals = data.max().values if hasattr(data, 'values') else data.max(axis=0)\n",
+    "        \n",
+    "        # Generate k random centroids within feature bounds\n",
+    "        # Shape: (k clusters, n_features)\n",
     "        centroids = np.random.uniform(min_vals, max_vals, size=(self.k, len(data.columns)))\n",
     "        return centroids\n",
     "    \n",
     "    def calculate_distances(self, data):\n",
+    "        \"\"\"\n",
+    "        Calculate Euclidean distances from each data point to all centroids\n",
+    "        Returns: distance matrix of shape (n_samples, k_clusters)\n",
+    "        \"\"\"\n",
+    "        # Convert DataFrame to numpy array if needed\n",
     "        data_array = data.values if hasattr(data, 'values') else data\n",
     "        distances = []\n",
     "\n",
+    "        # Calculate distance from each point to each centroid\n",
     "        for i, centroid in enumerate(self.centroids):\n",
+    "            # Euclidean distance: sqrt(sum((x - centroid)²))\n",
     "            dist = np.sqrt(np.sum((data_array - centroid) ** 2, axis=1))\n",
     "            distances.append(dist)\n",
     "        \n",
+    "        # Transpose to get shape (n_samples, k_clusters)\n",
     "        distances = np.array(distances).T\n",
     "        return distances\n",
     "    \n",
     "    def assign_labels(self, distances):\n",
+    "        \"\"\"\n",
+    "        Assign each data point to the nearest centroid\n",
+    "        Returns: cluster labels for each data point\n",
+    "        \"\"\"\n",
+    "        # Find the index of minimum distance (nearest centroid) for each point\n",
     "        labels = np.argmin(distances, axis=1)\n",
     "        return labels\n",
     "    \n",
     "    def update_centroids(self, data, labels):\n",
+    "        \"\"\"\n",
+    "        Update centroids as the mean of points assigned to each cluster\n",
+    "        This is the core of Lloyd's algorithm\n",
+    "        \"\"\"\n",
     "        data_array = data.values if hasattr(data, 'values') else data\n",
     "        new_centroids = []\n",
     "\n",
+    "        # Update each centroid\n",
     "        for cluster_id in range(self.k):\n",
+    "            # Get all points assigned to this cluster\n",
     "            cluster_points = data_array[labels == cluster_id]\n",
     "\n",
     "            if len(cluster_points) > 0:\n",
+    "                # New centroid = mean of assigned points\n",
     "                new_centroid = cluster_points.mean(axis=0)\n",
     "            else:\n",
+    "                # Handle empty cluster by assigning random data point\n",
     "                new_centroid = data_array[np.random.randint(0, len(data_array))]\n",
     "            new_centroids.append(new_centroid)\n",
     "        \n",
     "        return np.array(new_centroids)\n",
     "    \n",
     "    def calculate_inertia(self, data, labels):\n",
+    "        \"\"\"\n",
+    "        Calculate within-cluster sum of squares (inertia)\n",
+    "        Lower inertia indicates more compact clusters\n",
+    "        \"\"\"\n",
     "        data_array = data.values if hasattr(data, 'values') else data\n",
     "        inertia = 0.0\n",
     "\n",
+    "        # Sum squared distances from points to their assigned centroids\n",
     "        for cluster_id in range(self.k):\n",
     "            cluster_points = data_array[labels == cluster_id]\n",
     "            if len(cluster_points) > 0:\n",
     "                centroid = self.centroids[cluster_id]\n",
+    "                # Add sum of squared distances for this cluster\n",
     "                inertia += np.sum((cluster_points - centroid) ** 2)\n",
     "\n",
     "        return inertia\n",
     "    \n",
     "    def fit(self, data, plot=True):\n",
+    "        \"\"\"\n",
+    "        Main training method implementing Lloyd's algorithm\n",
+    "        \n",
+    "        Algorithm steps:\n",
+    "        1. Initialize centroids randomly\n",
+    "        2. Assign points to nearest centroids\n",
+    "        3. Update centroids as cluster means\n",
+    "        4. Repeat until convergence or max iterations\n",
+    "        \"\"\"\n",
+    "        # Step 1: Initialize centroids\n",
     "        self.centroids = self.initialize_centroids(data)\n",
     "\n",
     "        old_centroids = None\n",
     "        self.n_iterations = 0\n",
     "\n",
+    "        # Lloyd's algorithm main loop\n",
     "        for iteration in range(1, self.max_iteration + 1):\n",
+    "            # Check for convergence (centroids stop moving significantly)\n",
     "            if old_centroids is not None:\n",
     "                centroid_diff = np.abs(self.centroids - old_centroids).max()\n",
-    "                if centroid_diff < 1e-4:\n",
+    "                if centroid_diff < 1e-4:  # Convergence threshold\n",
     "                    print(f\"Converged after {iteration-1} iterations!\")\n",
     "                    break\n",
     "\n",
+    "            # Save current centroids to check convergence\n",
     "            old_centroids = self.centroids.copy()\n",
     "\n",
+    "            # Step 2: Calculate distances and assign labels\n",
     "            distances = self.calculate_distances(data)\n",
     "            self.labels = self.assign_labels(distances)\n",
+    "            \n",
+    "            # Step 3: Update centroids\n",
     "            self.centroids = self.update_centroids(data, self.labels)\n",
     "\n",
+    "            # Optional: Plot clustering progress\n",
     "            if plot:\n",
     "                self.plot_iterations(data, self.labels, self.centroids, iteration)\n",
     "            self.n_iterations = iteration\n",
     "\n",
+    "        # Calculate final clustering quality measure\n",
     "        self.inertia = self.calculate_inertia(data, self.labels)\n",
     "        print(f\"Final inertia: {self.inertia:.2f}\")\n",
     "        return self\n",
     "    \n",
     "    def plot_iterations(self, data, labels, centroids, iteration):\n",
+    "        \"\"\"\n",
+    "        Visualize clustering progress using PCA for dimensionality reduction\n",
+    "        Shows data points colored by cluster and centroids as red X's\n",
+    "        \"\"\"\n",
+    "        # Use PCA to reduce 7D data to 2D for visualization\n",
     "        pca = PCA(n_components=2)\n",
     "        data_2d = pca.fit_transform(data)\n",
     "        centroids_2d = pca.transform(centroids)\n",
     "\n",
+    "        # Clear previous plot for animation effect\n",
     "        clear_output(wait=True)\n",
     "\n",
+    "        # Create clustering visualization\n",
     "        plt.figure(figsize=(8, 6))\n",
     "        plt.title(f'K-Means Clustering - Iteration {iteration}')\n",
     "\n",
+    "        # Plot data points colored by cluster assignment\n",
     "        scatter = plt.scatter(data_2d[:, 0], data_2d[:, 1], c=labels, cmap='viridis', alpha=0.6)\n",
+    "        # Plot centroids as red X markers\n",
     "        plt.scatter(centroids_2d[:, 0], centroids_2d[:, 1], c='red', marker='X', s=200, label='Centroids')\n",
+    "        \n",
     "        plt.xlabel('PCA Component 1')\n",
     "        plt.ylabel('PCA Component 2')\n",
     "        plt.colorbar(scatter, label='Cluster')\n",
@@ -812,7 +920,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": null,
    "id": "cea63bc8",
    "metadata": {},
    "outputs": [
@@ -846,13 +954,19 @@
     }
    ],
    "source": [
+    "# Train the custom K-Means model\n",
+    "# Parameters:\n",
+    "# - k=4: Create 4 clusters (good for player segmentation)\n",
+    "# - max_iterations=100: Stop if algorithm doesn't converge\n",
+    "# - random_state=42: Ensure reproducible results\n",
+    "# - plot=True: Show real-time visualization of clustering process\n",
     "kmc = KMeansClustering(k=4, max_iterations=100, random_state=42)\n",
     "kmc.fit(data, plot=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": null,
    "id": "c61f6137",
    "metadata": {},
    "outputs": [
@@ -873,13 +987,16 @@
     }
    ],
    "source": [
-    "print(\"kmc.centroids:\")\n",
+    "# Display the final centroids (cluster centers) from our custom implementation\n",
+    "# Each row represents one cluster center in the standardized feature space\n",
+    "# These are the \"average player profiles\" for each cluster\n",
+    "print(\"Custom K-Means Centroids:\")\n",
     "print(kmc.centroids)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": null,
    "id": "c4f6333f",
    "metadata": {},
    "outputs": [
@@ -902,15 +1019,23 @@
     }
    ],
    "source": [
+    "# Compare with scikit-learn's K-Means implementation\n",
+    "# Use same parameters for fair comparison\n",
     "from sklearn.cluster import KMeans\n",
+    "\n",
+    "# Initialize scikit-learn K-Means with identical parameters\n",
     "km = KMeans(n_clusters=4, random_state=42)\n",
+    "\n",
+    "# Fit the model to our standardized data\n",
     "km.fit(data)\n",
+    "\n",
+    "# Display the cluster centers\n",
     "km.cluster_centers_"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": null,
    "id": "a44304dc",
    "metadata": {},
    "outputs": [
@@ -1003,12 +1128,13 @@
     }
    ],
    "source": [
+    "print(\"Scikit-learn K-Means Centroids:\")\n",
     "pd.DataFrame(km.cluster_centers_, columns=data.columns)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": null,
    "id": "2d052c3f",
    "metadata": {},
    "outputs": [
@@ -1101,12 +1227,13 @@
     }
    ],
    "source": [
+    "print(\"Custom K-Means Centroids:\")\n",
     "pd.DataFrame(kmc.centroids, columns=data.columns)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": null,
    "id": "344c25a7",
    "metadata": {},
    "outputs": [
@@ -1276,12 +1403,16 @@
     }
    ],
    "source": [
+    "# Analyze Cluster 0 from our custom K-Means implementation\n",
+    "# Show actual player names and their original (non-standardized) feature values\n",
+    "# This helps interpret what type of players are grouped together\n",
+    "print(\"Players in Cluster 0 (Custom K-Means):\")\n",
     "players[kmc.labels == 0][['name'] + features].head(10)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": null,
    "id": "29456321",
    "metadata": {},
    "outputs": [
@@ -1451,6 +1582,10 @@
     }
    ],
    "source": [
+    "# Analyze Cluster 2 from scikit-learn K-Means implementation\n",
+    "# Compare the types of players with our custom implementation\n",
+    "# Different cluster numbers might contain similar player types due to random initialization\n",
+    "print(\"Players in Cluster 2 (Scikit-learn K-Means):\")\n",
     "players[km.labels_ == 2][['name'] + features].head(10)"
    ]
   }
